# alpha-engine

./: .gitignore  CMakeLists.txt  README.md
src/: glad.c  main.cpp
src/include/: Camera.cpp  Camera.h  EBO.h  Texture.cpp  Texture.h  VAO.h  VBO.h  engine.h  entity.h  shaderClass.cpp  shaderClass.h  utils.h
src/include/entities/: cube_entity.h
src/include/glad/: glad.h
